# FacebookClient

./: .travis.yml  CMakeLists.txt
examples/: main.cpp
include/facebook/: client.hpp
sources/: client.cpp  client.hpp
tests/: check.cpp
